app/assets/stylesheets/_defaults.css.sass
@import compass/reset
@import compass/utilities
@import compass/css3
@import 960/grid
@import mixins/buttons

$green: #7DC241
$blue: #3399CB
$pink: #df499a
$orange: #ef803b
$gray: #333
$header: #2BB1E3
$fb_blue: #3B5998

$grid-system: 16
$ninesixty-columns: $grid-system
$grid-half: $grid-system * 0.5

@mixin grid-padded
  +grid($grid-system)

// Fonts defaults
+font-face('Akagi-Book', font-files(asset_path('ttf/style_174436.ttf', 'font'), asset_path('woff/style_174436.woff', 'font'), asset_path('svg/style_174436.svg', 'font')), asset_path('eot/style_174436.eot', 'font'))
+font-face('Akagi-Book-Italic', font-files(asset_path('ttf/Akagi-BookItalic.ttf', 'font')), italic)
+font-face('Akagi-Book', font-files(asset_path('ttf/Akagi-Ex.ttf', 'font')), asset_path('eot/style_174436.eot', 'font'), bold)
+font-face('Folk-solid', font-files(asset_path('woff/style_192110.woff', 'font'), asset_path('ttf/style_192110.ttf', 'font'), asset_path('svg/style_192110.svg', 'font')), asset_path('eot/style_192110.eot', 'font'))

// Main layout style
body
  font: normal 1em/28px "Akagi-Book", Tahoma, Lucida Grande
  color: $gray
  background: url(asset_path('bg.png', 'image'))
  margin: 0
  padding: 0
  width: 100%

//.content
  overflow: auto
  //height: 100%

strong
  font-weight: bold

h1
  font-family: "Folk-solid", Arial, Tahoma
  font-size: 3.5em
  line-height: 64px
  text-transform: uppercase
  color: $header
  text-shadow: 0 -1px 1px #666
h2
  font-size: 1.9em
h3
  font-size: 1.4em
h4
  font-size: 0.9em
h5
  font-size: 0.6em
h6
  font-size: 0.4em

a, a:active, a:visited
  color: $blue
  text-decoration: none
  &:hover
    color: lighten($blue, 10%)
    border-bottom: 1px solid lighten($blue, 10%)

input[type=text]
  border: 1px solid #dedede
  padding: 10px 15px
  +box-shadow(inset 1px 1px 2px #999)
  font-size: 14px

input[type=submit],button[type=button]
  +btn($orange, $pink)
  margin: 10px

input[disabled]
  +btn(#999, #999)
  color: #666!important

.wrapper
  +grid-container

.message
  width: 68%
  margin-left: 15%
  margin-right: 15%
  padding: 10px 20px
  position: fixed
  border: 1px solid #fff
  border-top: none
  color: white
  opacity: .9
  +border-radius(0 0 6px 6px)
  +box-shadow(1px 1px 2px #333)
.alert
  background: red
.notice
  background: $green

// Footer is repeated in the splash and the application layouts.
footer
  +grid-container
  position: fixed
  bottom: 0
  background: url(asset_path('bg.png', 'image'))
  border-top: 3px dashed $green
  padding-top: 5px
  margin-top: 2px


  nav.links
    +grid(4)
    text-shadow: 1px 1px 1px white
    margin-top: 4px
    a
      color: $gray
      text-transform: uppercase
      &:hover
        color: $gray
        border-bottom: 1px solid $gray
    span
      margin: 0 10px
  .questionary
    +grid(4)
    margin-bottom: 10px
    span
      background: $green
      color: white
      float: right
      line-height: 100%
      padding: 5px
      margin-top: 4px
      cursor: pointer
      +border-radius(5px)
      +box-shadow(3px 3px 0px $blue)
      +opacity(0.8)
      &:hover
        +opacity(1)

  .participate
    +grid(8)
    +clearfix
    margin-bottom: 10px
    span
      background: white
      float: right
      line-height: 100%
      padding: 10px
      +border-radius(5px)

